# Monitor

./: .gitignore  README.md  main.py  pyproject.toml  testv1.py  testv2.py
configs/: default.yaml
legacy/: monitor_operacion.py
scripts/: run_continuo.sh  run_gui.sh
src/: __main__.py  cli.py  gui.py
src/io/: recorders.py
src/monitor/: __init__.py  __main__.py  cli.py  gui.py
src/monitor/pipeline/: avg_motion.py  edges_motion.py  flow_motion.py  knn_motion.py
src/monitor/utils/: camera.py  draw.py  smoothing.py
src/pipeline/: diff_motion.py  mog2_motion.py
src/rdm_monitor/: cli.py  gui.py
src/rdm_monitor/utils/: camera.py
