[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
version = "0.1.0"
description = "Herramienta de monitoreo de actividad basada en OpenCV"
readme = "README.md"
authors = [{name = "Monitor Maintainers"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
]

[project.scripts]
monitor-cli = "monitor.cli:main"
monitor-gui = "monitor.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
